--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -18,9 +18,6 @@
 
 <body>
     <!-- wrapper -->
+    //= nav
     <div class="wrapper">
-        <!-- site-header -->
-        <header id="header" class="site-header">
-            
-        </header>
-        <!-- END:site-header -->
+        //= description
