create second page

--- a/app/template-modules/template-assets/content.html
+++ b/app/template-modules/template-assets/content.html
@@ -1,12 +1,7 @@
 <!-- SATRT: content -->
 <div class="content">
   <div class="content-row">
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
+    dfds
   </div>
 </div>
 <!-- END: content -->
