--- a/app/template-modules/template-assets/nav.html
+++ b/app/template-modules/template-assets/nav.html
@@ -1,13 +1,16 @@
 <!-- START: nav -->
 <div class="nav">
-  <span class="nav-title">Catalog</span>
-  <div class="nav-list">
-    <div class="nav-list__item" tabindex="1">Featured</div>
-    <div class="nav-list__item" tabindex="1">Resently added</div>
-    <div class="nav-list__item" tabindex="1">Best of Chatch-up</div>
-    <div class="nav-list__item" tabindex="1">Subscriptions</div>
-    <div class="nav-list__item" tabindex="1">Collections</div>
-    <div class="nav-list__item" tabindex="1">Browse</div>
+  <div class="nav-arrow" tabindex="1"></div>
+</div>
+<div class="nav-hidden">
+  <span class="nav-hidden-title">Catalogue</span>
+  <div class="nav-hidden-list">
+    <div class="nav-hidden-list__item" tabindex="1">Featured</div>
+    <div class="nav-hidden-list__item" tabindex="1">Resently added</div>
+    <div class="nav-hidden-list__item" tabindex="1">Best of Chatch-up</div>
+    <div class="nav-hidden-list__item" tabindex="1">Subscriptions</div>
+    <div class="nav-hidden-list__item" tabindex="1">Collections</div>
+    <div class="nav-hidden-list__item" tabindex="1">Browse</div>
   </div>
 </div>
 <!-- END: nav -->
