fixed templates, add style to second page

--- a/app/template-modules/template-assets/content.html
+++ b/app/template-modules/template-assets/content.html
@@ -1,7 +1,16 @@
 <!-- SATRT: content -->
 <div class="content">
   <div class="content-row">
-    dfds
+    //= card
+    //= card
+    //= card
+    //= card
+    //= card
+    //= card
+    //= card
+    //= card
+    //= card
+    //= card
   </div>
 </div>
 <!-- END: content -->
