--- a/app/template-modules/template-assets/description.html
+++ b/app/template-modules/template-assets/description.html
@@ -1,7 +1,12 @@
 <!-- START: description -->
 <div class="description">
   <div class="description-text">
-    <span class="description-text__title">Lorem ipsum</span>  
+    <span class="description-text__subtitle">Collections</span>
+    <span class="description-text__title">Best of 2017</span>  
+    <div class="description-text__count">
+      <span class="icon"></span>
+      <span class="descroption-title">22 Titles</span>
+    </div>
     <div class="description-text__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
@@ -12,10 +17,13 @@
     </div>
   </div>
   <div class="description-action">
-    <div class="btn" tabindex="1">Buy all</div>
+    <div class="btn active" tabindex="1">Buy all XXXX</div>
     <div class="sort-card">
-      <div class="sort-card__title jsCardTitle" tabindex="1">Sort</div>
-      <div class="sort-card-list jsCardList">
+      <div class="sort-card__title active" tabindex="1">
+        <span>Sort: Release date</span>
+        <span class="icon"></span>
+      </div>
+      <div class="sort-card-list active">
         <span class="sort-card-list__item" tabindex="1">Lorem1</span>
         <span class="sort-card-list__item" tabindex="1">Lorem2</span>
         <span class="sort-card-list__item" tabindex="1">Lorem3</span>
