--- a/app/template-modules/template-assets/header-collection.html
+++ b/app/template-modules/template-assets/header-collection.html
@@ -21,7 +21,4 @@
     //= nav
     <div class="wrapper">
         //= time
-        <div class="content-container">
-            //= description
-            //= content
-        </div>
+        //= collection
