--- a/app/template-modules/template-assets/card.html
+++ b/app/template-modules/template-assets/card.html
@@ -2,6 +2,7 @@
 <div class="card" tabindex="2">
   <div class="card-body">
     <span class="card-title">Lorem ipsum</span>
+    <span class="card-title-hide">Lorem ipsum</span>
   </div>
 </div>
 <!-- END: card -->
