--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -1,6 +1,6 @@
 <!-- START: collection -->
 <div class="collection-wrapper">
-  <div class="collection" tabindex="1">
+  <div class="collection -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
     <div class="collection-holder">
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div class="collection" tabindex="1">
+  <div class="collection -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
     <div class="collection-holder">
