--- a/app/template-modules/template-assets/content.html
+++ b/app/template-modules/template-assets/content.html
@@ -1,16 +1,86 @@
 <!-- SATRT: content -->
 <div class="content">
   <div class="content-row">
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
-    //= card
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg1">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg2">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg3">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg4">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg5">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg6">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg7">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg8">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg9">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
+    <!-- START: card -->
+    <div class="card" tabindex="2">
+      <div class="card-body body-bg10">
+        <span class="card-title">Lorem ipsum</span>
+        <span class="card-title-hide">Lorem ipsum</span>
+      </div>
+    </div>
+    <!-- END: card -->
   </div>
 </div>
 <!-- END: content -->
