--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -19,7 +19,7 @@
 <body>
     <!-- wrapper -->
     //= nav
-    <div class="wrapper">
+    <div class="wrapper wrapper--inner">
         //= time
         <div class="content-container">
             //= description
