--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -3,7 +3,7 @@
   <div class="collection -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
-    <div class="collection-holder">
+    <div class="collection-holder collection-bg1">
       <div class="collection-text">
         <span class="collection-title">Collection</span>
         <span class="collection-subtitle">Supperheroes</span>
@@ -19,7 +19,7 @@
   <div class="collection -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
-    <div class="collection-holder">
+    <div class="collection-holder collection-bg2">
       <div class="collection-text">
         <span class="collection-title">Collection</span>
         <span class="collection-subtitle">Supperheroes</span>
@@ -32,10 +32,10 @@
       </div>
     </div>
   </div>
-  <!-- <div class="collection -js-goto-innerpage" tabindex="1">
+  <div class="collection -js-goto-innerpage" tabindex="1">
       <div class="collection-back__one"></div>
       <div class="collection-back__two"></div>
-      <div class="collection-holder">
+      <div class="collection-holder collection-bg3">
         <div class="collection-text">
           <span class="collection-title">Collection</span>
           <span class="collection-subtitle">Supperheroes</span>
@@ -47,6 +47,6 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 </div>
 <!-- END: collection -->
