--- a/app/template-modules/template-assets/header-collection.html
+++ b/app/template-modules/template-assets/header-collection.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
+    <meta name="viewport" content=" maximum-scale=1.0">
     <title>Title</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico">
     <!-- build:css css/vendor.css -->
