--- a/app/template-modules/template-assets/nav.html
+++ b/app/template-modules/template-assets/nav.html
@@ -8,8 +8,8 @@
       <span class="nav-hidden-title">Catalogue</span>
       <div class="nav-hidden-list">
         <div class="nav-hidden-list__item"><span tabindex="1">Featured</span></div>
-        <div class="nav-hidden-list__item"><span tabindex="1">Resently added</span></div>
-        <div class="nav-hidden-list__item"><span tabindex="1">Best of Chatch-up</span></div>
+        <div class="nav-hidden-list__item"><span tabindex="1">Recently Added</span></div>
+        <div class="nav-hidden-list__item"><span tabindex="1">Best of Catch-Up</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Subscriptions</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Collections</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Browse</span></div>
