--- a/app/template-modules/template-assets/content.html
+++ b/app/template-modules/template-assets/content.html
@@ -4,16 +4,16 @@
     <!-- START: card -->
     <div class="card" tabindex="2">
       <div class="card-body body-bg1">
-        <span class="card-title">Lorem ipsum</span>
-        <span class="card-title-hide">Lorem ipsum</span>
+        <span class="card-title">New Release</span>
+        <span class="card-title-hide">Alient: Covenant</span>
       </div>
     </div>
     <!-- END: card -->
     <!-- START: card -->
     <div class="card" tabindex="2">
       <div class="card-body body-bg2">
-        <span class="card-title">Lorem ipsum</span>
-        <span class="card-title-hide">Lorem ipsum</span>
+        <span class="card-title">Popular</span>
+        <span class="card-title-hide">Crimson Peak</span>
       </div>
     </div>
     <!-- END: card -->
