--- a/app/template-modules/template-assets/description.html
+++ b/app/template-modules/template-assets/description.html
@@ -18,15 +18,15 @@
   </div>
   <div class="description-action">
     <div class="btn active" tabindex="1">Buy all XXXX</div>
-    <div class="sort-card">
+    <div class="sort-card" id="sortDropdown">
       <div class="sort-card__title" tabindex="1">
         <span>Sort: <em>Release date</em></span>
         <span class="icon"></span>
       </div>
       <div class="sort-card-list">
-        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem1">Lorem1</span>
-        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem2">Lorem2</span>
-        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem3">Lorem3</span>
+        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem1">A-Z</span>
+        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem2">Rating</span>
+        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem3">Release Date</span>
       </div>
     </div>
   </div>
