--- a/app/template-modules/template-assets/time.html
+++ b/app/template-modules/template-assets/time.html
@@ -1,6 +1,6 @@
 <!-- START: time -->
 <div class="time">
-  <span class="time-count">16:45</span>
-  <span class="time-day">20 mar</span>
+  <span id="time" class="time-count">16:45</span>
+  <span id="date" class="time-day">20 mar</span>
 </div>
 <!-- END: time -->
