--- a/app/template-modules/template-assets/nav.html
+++ b/app/template-modules/template-assets/nav.html
@@ -7,7 +7,7 @@
     <div class="nav-hidden__holder">
       <span class="nav-hidden-title">Catalogue</span>
       <div class="nav-hidden-list">
-        <div class="nav-hidden-list__item"><span tabindex="1">Featured</span></div>
+        <div id="jsFeatured" class="nav-hidden-list__item active"><span tabindex="1">Featured</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Recently Added</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Best of Catch-Up</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Subscriptions</span></div>
