add time date? fixed sotr list

--- a/app/template-modules/template-assets/description.html
+++ b/app/template-modules/template-assets/description.html
@@ -24,9 +24,9 @@
         <span class="icon"></span>
       </div>
       <div class="sort-card-list">
-        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem1">A-Z</span>
-        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem2">Rating</span>
-        <span class="sort-card-list__item" tabindex="1" data-sort="Lorem3">Release Date</span>
+        <span class="sort-card-list__item" tabindex="1" data-sort="A-Z">A-Z</span>
+        <span class="sort-card-list__item" tabindex="1" data-sort="Rating">Rating</span>
+        <span class="sort-card-list__item" tabindex="1" data-sort="Release Date">Release Date</span>
       </div>
     </div>
   </div>
