--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -32,7 +32,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="collection -js-goto-innerpage" tabindex="1">
+  <div class="collection -js-goto-innerpage" tabindex="1">
       <div class="collection-back__one"></div>
       <div class="collection-back__two"></div>
       <div class="collection-holder collection-bg3">
@@ -47,6 +47,6 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 </div>
 <!-- END: collection -->
