delet favicon.ico, add new script

--- a/app/template-modules/template-assets/nav.html
+++ b/app/template-modules/template-assets/nav.html
@@ -11,7 +11,7 @@
         <div class="nav-hidden-list__item"><span tabindex="1">Recently Added</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Best of Catch-Up</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Subscriptions</span></div>
-        <div class="nav-hidden-list__item"><span tabindex="1">Collections</span></div>
+        <div id="jsCollections" class="nav-hidden-list__item"><span tabindex="1" >Collections</span></div>
         <div class="nav-hidden-list__item"><span tabindex="1">Browse</span></div>
       </div>
     </div>
