--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0">
     <title>Title</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico">
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico"> -->
     <!-- build:css css/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
