--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -33,20 +33,26 @@
     </div>
   </div>
   <div class="collection -js-goto-innerpage" tabindex="1">
-      <div class="collection-back__one"></div>
-      <div class="collection-back__two"></div>
-      <div class="collection-holder collection-bg3">
-        <div class="collection-text">
-          <span class="collection-title">Collection</span>
-          <span class="collection-subtitle">Supperheroes</span>
-        </div>
-        <div class="collection-count">
-          <div class="collection-count-holder">
-            <span class="collection-count__icon"></span>
-            <span class="collection-count__count">22</span>
-          </div>
+    <div class="collection-back__one"></div>
+    <div class="collection-back__two"></div>
+    <div class="collection-holder collection-bg3">
+      <div class="collection-text">
+        <span class="collection-title">Collection</span>
+        <span class="collection-subtitle">Supperheroes</span>
+      </div>
+      <div class="collection-count">
+        <div class="collection-count-holder">
+          <span class="collection-count__icon"></span>
+          <span class="collection-count__count">22</span>
         </div>
       </div>
     </div>
+  </div>
+  <!-- START: hidden nav title block -->
+  <div class="collection-inner-title">
+    <span class="nav-inner-title">Browse</span>
+  </div>
+  <!-- END: hidden nav title block -->
 </div>
+
 <!-- END: collection -->
