--- a/app/template-modules/template-assets/header-collection.html
+++ b/app/template-modules/template-assets/header-collection.html
@@ -18,7 +18,10 @@
 
 <body>
     <!-- wrapper -->
-    //= nav
+    <div class="nav-wrapper">
+        //= nav
+        //= nav-menu
+    </div>
     <div class="wrapper">
         //= time
         //= collection
