--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -18,7 +18,9 @@
 
 <body>
     <!-- wrapper -->
-    //= nav
+    <div class="nav-wrapper">
+        //= nav
+    </div>
     <div class="wrapper wrapper--inner">
         //= time
         <div class="content-container">
