added key navigation to Collections page

--- a/app/template-modules/template-assets/card.html
+++ b/app/template-modules/template-assets/card.html
@@ -1,5 +1,5 @@
 <!-- START: card -->
-<div class="card" tabindex="2">
+<div class="card" name="card" tabindex="2">
   <div class="card-body">
     <span class="card-title">Lorem ipsum</span>
     <span class="card-title-hide">Lorem ipsum</span>
