--- a/app/template-modules/template-assets/content.html
+++ b/app/template-modules/template-assets/content.html
@@ -2,7 +2,7 @@
 <div class="content">
   <div class="content-row">
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg1">
         <span class="card-title">New Release</span>
         <span class="card-title-hide">Alient: Covenant</span>
@@ -10,7 +10,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg2">
         <span class="card-title">Popular</span>
         <span class="card-title-hide">Crimson Peak</span>
@@ -18,7 +18,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg3">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -26,7 +26,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg4">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -34,7 +34,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg5">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -42,7 +42,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg6">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -50,7 +50,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg7">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -58,7 +58,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg8">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -66,7 +66,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg9">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
@@ -74,7 +74,7 @@
     </div>
     <!-- END: card -->
     <!-- START: card -->
-    <div class="card" tabindex="2">
+    <div class="card" name="card" tabindex="2">
       <div class="card-body body-bg10">
         <span class="card-title">Lorem ipsum</span>
         <span class="card-title-hide">Lorem ipsum</span>
