--- a/app/template-modules/template-assets/nav.html
+++ b/app/template-modules/template-assets/nav.html
@@ -1,5 +1,5 @@
 <!-- START: nav -->
 <div class="nav">
-  <div class="nav-arrow -js-goto-startpage" tabindex="1"></div>
+  <div class="nav-arrow -js-goto-startpage" name="back" tabindex="1"></div>
 </div>
 <!-- END: nav -->
