--- a/app/template-modules/template-assets/description.html
+++ b/app/template-modules/template-assets/description.html
@@ -17,9 +17,9 @@
     </div>
   </div>
   <div class="description-action">
-    <div class="btn active" tabindex="1">Buy all XXXX<span class="money-icon"></span></div>
+    <div class="btn" name="buy" tabindex="1">Buy all XXXX<span class="money-icon"></span></div>
     <div class="sort-card" id="sortDropdown">
-      <div class="sort-card__title" tabindex="1">
+      <div class="sort-card__title" name="sort-card__title" tabindex="1">
         <span>Sort: <em>Release date</em></span>
         <span class="icon"></span>
       </div>
