add adaptive for hidden collection title

--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -1,6 +1,6 @@
 <!-- START: collection -->
-<div class="collection-wrapper">
-  <div class="collection -js-goto-innerpage" tabindex="1">
+<div class="collection-wrapper collection-wrapper--title">
+  <div class="collection hidden -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
     <div class="collection-holder collection-bg1">
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div class="collection -js-goto-innerpage" tabindex="1">
+  <div class="collection hidden -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
     <div class="collection-holder collection-bg2">
@@ -32,7 +32,7 @@
       </div>
     </div>
   </div>
-  <div class="collection -js-goto-innerpage" tabindex="1">
+  <div class="collection hidden -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
     <div class="collection-holder collection-bg3">
