add new after bg

--- a/app/template-modules/template-assets/nav-menu.html
+++ b/app/template-modules/template-assets/nav-menu.html
@@ -1,5 +1,5 @@
 <!-- START: nav menu -->
-<div class="nav-hidden">
+<div class="nav-hidden hide-menu">
   <div class="nav-hidden__holder">
     <span class="nav-hidden-title">Catalogue</span>
     <div id="jsNavList" class="nav-hidden-list">
