--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -1,5 +1,5 @@
 <!-- START: collection -->
-<div class="collection-wrapper push-collection">
+<div class="collection-wrapper">
   <div class="collection -js-goto-innerpage" tabindex="1">
     <div class="collection-back__one"></div>
     <div class="collection-back__two"></div>
