delete after for wrapper

--- a/app/template-modules/template-assets/header-collection.html
+++ b/app/template-modules/template-assets/header-collection.html
@@ -23,5 +23,6 @@
         //= nav-menu
     </div>
     <div class="wrapper">
+        <div class="wrapper__sub"></div>
         //= time
         //= collection
