--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -22,6 +22,7 @@
         //= nav
     </div>
     <div class="wrapper wrapper--inner">
+        <div class="wrapper__sub"></div>
         //= time
         <div class="content-container">
             //= description
