fixed collection hide title

--- a/app/template-modules/template-assets/collection.html
+++ b/app/template-modules/template-assets/collection.html
@@ -49,9 +49,9 @@
     </div>
   </div>
   <!-- START: hidden nav title block -->
-  <div class="collection-inner-title">
+  <!-- <div class="collection-inner-title">
     <span class="nav-inner-title">Browse</span>
-  </div>
+  </div> -->
   <!-- END: hidden nav title block -->
 </div>
 
