--- a/app/template-modules/template-assets/catalogue.html
+++ b/app/template-modules/template-assets/catalogue.html
@@ -1,7 +1,7 @@
-<!-- START: featured -->
+<!-- START: catalogue -->
 <div class="catalogue-wrapper">
   <div class="catalogue-inner-title">
     <span class="nav-inner-title">Best of Catch-Up</span>
   </div>
 </div>
-<!-- END: featured -->
+<!-- END: catalogue -->
