--- a/app/template-modules/template-assets/header-collection.html
+++ b/app/template-modules/template-assets/header-collection.html
@@ -2,27 +2,30 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content=" maximum-scale=1.0">
-    <title>Title</title>
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico"> -->
-    <!-- build:css css/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css css/bundle.css -->
-    <link rel="stylesheet" href="./css/assets.css">
-    <link rel="stylesheet" href="./css/base.css">
-    <!-- endbuild -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content=" maximum-scale=1.0">
+  <title>Title</title>
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico"> -->
+  <!-- build:css css/vendor.css -->
+  <!-- bower:css -->
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css css/bundle.css -->
+  <link rel="stylesheet" media="tv" href="./css/assets.css">
+  <link rel="stylesheet" media="tv" href="./css/base.css">
+
+  <link rel="stylesheet" media="all" href="./css/assets.css">
+  <link rel="stylesheet" media="all" href="./css/base.css">
+  <!-- endbuild -->
 </head>
 
 <body>
-    <!-- wrapper -->
-    <div class="nav-wrapper">
-        //= nav
-        //= nav-menu
-    </div>
-    <div class="wrapper">
-        <div class="wrapper__sub"></div>
-        //= time
-        //= collection
+  <!-- wrapper -->
+  <div class="nav-wrapper">
+    //= nav
+    //= nav-menu
+  </div>
+  <div class="wrapper">
+    <div class="wrapper__sub"></div>
+    //= time
+    //= collection
