fixed header meta

--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -2,29 +2,28 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-    <title>Title</title>
-    <!-- <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico"> -->
-    <!-- build:css css/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css css/bundle.css -->
-    <link rel="stylesheet" href="./css/assets.css">
-    <link rel="stylesheet" href="./css/base.css">
-    <!-- endbuild -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content=" maximum-scale=1.0">
+  <title>Title</title>
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="img/base/favicon.ico"> -->
+  <!-- build:css css/vendor.css -->
+  <!-- bower:css -->
+  <!-- endbower -->
+  <!-- endbuild -->
+  <!-- build:css css/bundle.css -->
+  <link rel="stylesheet" href="./css/assets.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <!-- endbuild -->
 </head>
 
 <body>
-    <!-- wrapper -->
-    <div class="nav-wrapper">
-        //= nav
+  <!-- wrapper -->
+  <div class="nav-wrapper">
+    //= nav
+  </div>
+  <div class="wrapper wrapper--inner">
+    <div class="wrapper__sub"></div>
+    //= time
+    <div class="content-container">
+      //= description //= content
     </div>
-    <div class="wrapper wrapper--inner">
-        <div class="wrapper__sub"></div>
-        //= time
-        <div class="content-container">
-            //= description
-            //= content
-        </div>
