add new scss view-port-media

--- a/app/template-modules/template-assets/header.html
+++ b/app/template-modules/template-assets/header.html
@@ -25,5 +25,6 @@
     <div class="wrapper__sub"></div>
     //= time
     <div class="content-container">
-      //= description //= content
+      //= description
+      //= content
     </div>
